[package]
name = "chimper"
version = "0.3.1"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "A graphical image viewer"
#homepage = "..."
repository = "https://github.com/pedrocr/chimper"
license = "GPL-3.0"
categories = ["multimedia::images"]
edition = "2018"

[dependencies]
image = "0.22"
rand = "0.7"
crossbeam-utils = "0.7"
conrod_core = "0.68"
conrod_glium = "0.68"
conrod_winit = "0.68"
glium = "0.24"
winit = "0.19"

[dependencies.imagepipe]
version = "0.3.0"
path = "../imagepipe"

[dependencies.multicache]
version = "0.6.0"
path = "../multicache"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "chimper"
doc = false
