[package]
name = "chimper"
version = "0.3.2"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "A graphical image viewer"
#homepage = "..."
repository = "https://github.com/pedrocr/chimper"
license = "GPL-3.0"
categories = ["multimedia::images"]
edition = "2018"

[dependencies]
image = "0.23"
rand = "0.8"
crossbeam-utils = "0.8"
conrod_core = "0.70"
conrod_glium = "0.70"
conrod_winit = "0.70"
glium = "0.24"
winit = "0.19"

[dependencies.imagepipe]
version = "0.3.0"
path = "../imagepipe"

[dependencies.multicache]
version = "0.6.0"
path = "../multicache"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "chimper"
doc = false
