[package]
name = "chimper"
version = "0.3.2"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "A graphical image viewer"
#homepage = "..."
repository = "https://github.com/pedrocr/chimper"
license = "GPL-3.0"
categories = ["multimedia::images"]
edition = "2018"

[dependencies]
image = "0.23"
rand = "0.8"
conrod_core = "0.73"
conrod_glium = "0.73"
conrod_winit = "0.73"
glium = "0.28"
winit = "0.23"
log = "0.4"
env_logger = "0.8"

[dependencies.imagepipe]
version = "0.4"
path = "../imagepipe"

[dependencies.multicache]
version = "0.6.0"
path = "../multicache"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "chimper"
doc = false
